--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -96,7 +96,7 @@
     </main>
     <footer>
         <p id="rodape">
-            Site criado por <strong><a href="https://github.com/CaioMaier">Caio Maier</a></strong> para o <strong><a href="https://www.cursoemvideo.com">CursoemVideo</a></strong>
+            Site criado por <strong><a href="https://github.com/CaioMaier">Caio H. Maier</a></strong> para o <strong><a href="https://www.cursoemvideo.com">CursoemVideo</a></strong>
         </p>
     </footer>
 </body>
