projeto-redes-sociais

--- a/desafios/d015/index.html
+++ b/desafios/d015/index.html
@@ -7,11 +7,24 @@
     <title>Projeto redes sociais</title>
 </head>
 <body>
-    <section id="links">
-
-    </section>
-    <section id="celular">
-        <iframe id="tela" src=""></iframe>
-    </section>
+    <main>
+        <section id="links">
+            <a href="paginas/home.html" target="tela">
+                <div id="home" class="botao"></div></a>
+            <a href="paginas/youtube.html" target="tela">
+                <div id="youtube" class="botao"></div></a>
+            <a href="paginas/github.html" target="tela">
+                <div id="github" class="botao"></div></a>
+            <a href="paginas/instagram.html" target="tela">
+                <div id="instagram" class="botao"></div></a>
+            <a href="paginas/twitter.html" target="tela">
+                <div id="twitter" class="botao"></div></a>
+            <a href="paginas/facebook.html" target="tela">
+                <div id="facebook" class="botao"></div></a>
+        </section>
+        <section id="celular">
+            <iframe name="tela" id="tela" src="paginas/home.html"></iframe>
+        </section>
+    </main>
 </body>
 </html>
